@@ -12,6 +12,8 @@ version 0.8.0 - Not released, available at https://svn.sourceforge.net/svnroot/s
   - BUG: fix scripts/simuViewPop.py
   - NEW: add optional option destructive=False to simulator::getPopulation, as
 		a way to retrieve a population more efficiently.
+  - NEW: rewrite pyMigrator to allow for changing migration rates, and more subtle
+		control of migration using individual genotype.
 
 
 version 0.7.10 - (Rev 987) May 20, 2007
